k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: cofrap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: jixjocelyn/faas-fronted:1.0 #ghcr.io/florent228/faas-frontend:master-848f02a
          ports:
            - containerPort: 80
