k8s/postgres-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-external
  namespace: cofrap
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30432
  selector:
    app: postgres
